// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-futMm fZZUTw"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-futMm fZZUTw"
  >
    Default color is Bulma
  </span>
  <span
    className="sc-futMm cHqqGF"
    color="piccolo.100"
  >
    Piccolo
  </span>
  <span
    className="sc-futMm kxzjzn"
    color="trunks.100"
  >
    Trunks
  </span>
  <span
    className="sc-futMm uoved"
    color="krillin.100"
  >
    Krillin
  </span>
</div>
`;

exports[`Caption renders font weights 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-futMm fZZUTw"
  >
    Default font-weight is bold
  </span>
  <span
    className="sc-futMm jlFxiR"
  >
    Font-weight is regular
  </span>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-futMm fZZUTw"
  >
    Span is a default tag
  </span>
  <p
    className="sc-futMm fZZUTw"
  >
    Paragraph tag
  </p>
  <label
    className="sc-futMm fZZUTw"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-futMm fZZUTw"
  >
    Default font-size is 10px
  </span>
  <span
    className="sc-futMm fWNbgZ"
    size={9}
  >
    Size is 9px
  </span>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-futMm fZZUTw"
  >
    Text-align is not specified
  </span>
  <span
    className="sc-futMm gUYHBH"
  >
    Centered text
  </span>
  <span
    className="sc-futMm cLishA"
  >
    Right alignment
  </span>
</div>
`;
